Change logistics creative tab label to use translatable component